# homelab-monitor

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PARALLEL-INSTANCE-PLAN.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
apps/monitor/: Dockerfile  Dockerfile.test  README.md  alembic.ini  pyproject.toml
apps/monitor/alembic/: env.py
apps/monitor/alembic/versions/: 0001_initial_schema.py  0002_secrets_columns.py  0003_collector_quarantine.py  0004_api_tokens_hash_unique.py  0005_alerts_columns.py  0006_heartbeat_receiver.py  0007_crons_canonical_and_indexes.py  0008_cron_fingerprint_redesign.py  0009_wrapper_last_seen_at_rename.py  0010_cron_last_discovered_at.py  0011_cron_soft_deleted_at.py  0012_logscrape_columns.py  0013_cron_wrapper_installed.py  0014_logscrape_runs_since_heartbeat.py  0015_cron_runs.py  0016_crons_wrapper_format_version.py  0023_probe_targets.py  (+30 more)
apps/monitor/homelab_monitor/: __init__.py
apps/monitor/tests/: _helpers.py  _test_lifespan.py  _uvicorn_fixture.py  conftest.py  test_alertmanager_render.py  test_alerts_autofix_dispatch.py  test_alerts_ingest_e2e.py  test_alerts_repository.py  test_api_admin_backup.py  test_api_alerts_ingest.py  test_api_alerts_listing.py  test_api_alerts_outcomes.py  test_api_auth_change_password.py  test_api_auth_csrf.py  test_api_auth_e2e.py  test_api_auth_login.py  test_api_auth_logout.py  test_api_auth_me.py  test_api_auth_token_scope.py  test_api_autofix.py  test_api_collectors.py  test_api_cron_events.py  test_api_cron_failure_enrichment.py  test_api_cron_runs.py  test_api_crons.py  test_api_crons_discover_now.py  test_api_dependencies.py  test_api_docker_container_logs.py  test_api_docker_containers.py  test_api_docker_crashes_api.py  test_api_docker_healthcheck_api.py  test_api_docker_image_updates.py  test_api_docker_lifecycle.py  test_api_docker_probe_targets_crud.py  test_api_docker_probes.py  test_api_docker_pull_and_restart.py  test_api_docker_suggestions.py  test_api_docker_suggestions_actions.py  test_api_errors.py  test_api_events_sse.py  (+310 more)
(+1386 files in other folders)
