[project]
name = "homelab-monitor"
dynamic = ["version"]
description = "Self-hosted homelab monitoring service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "structlog>=24.4",
    "httpx>=0.28",
    "cryptography>=43",
    "bcrypt>=4.2",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "psutil>=6.1",
    "uuid-utils>=0.10",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.34",
    "pytest-xdist>=3.6",
    "ruff>=0.8",
    "pyright>=1.1.388",
    "freezegun>=1.5",
    "pre-commit>=4.0",
]

[project.scripts]
hm = "homelab_monitor.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["homelab_monitor"]

[tool.hatch.version]
path = "homelab_monitor/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "SIM", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]
# test_coverage_gaps.py needs:
# - PLC0415: inline imports inside each test (prevents cross-test namespace
#   pollution; tests private functions across many modules).
# - RUF100: some `# noqa:` comments target rules used elsewhere in the file;
#   ruff sees them as unused but they document the suppression intent for readers.
"tests/test_coverage_gaps.py" = ["PLC0415", "RUF100"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config -ra -n auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: real-time e2e tests using wall-clock sleeps; deselect with `-m \"not slow\"`",
]

[tool.coverage.run]
source = ["homelab_monitor"]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 100
